[gtp] Update config file with values for opencl on gpu usage

--- a/default_gtp.cfg
+++ b/default_gtp.cfg
@@ -86,11 +86,11 @@ logToStderr = false
 # An extreme value like 1 distributes playouts across every move on the board,
 # even very bad moves.
 # Affects analysis only, does not affect play.
-# analysisWideRootNoise = 0.04
+analysisWideRootNoise = 0.2
 
 # Try to limit the effect of possible bad or bogus move sequences in the
 # history leading to this position from affecting KataGo's move predictions.
-# analysisIgnorePreRootHistory = true
+analysisIgnorePreRootHistory = true
 
 # ===========================================================================
 # Rules
@@ -249,12 +249,12 @@ conservativePass = true
 # If the board is symmetric, search only one copy of each equivalent move.
 # Attempts to also account for ko/superko, will not theoretically perfect for
 # superko. Uncomment and set to false to disable.
-# rootSymmetryPruning = true
+rootSymmetryPruning = false
 
 # Uncomment and set to true to avoid a particular joseki that some networks
 # misevaluate, and also to improve opening diversity versus some particular
 # other bots that like to play it all the time.
-# avoidMYTDaggerHack = false
+avoidMYTDaggerHack = true
 
 # Prefer to avoid playing the same joseki in every corner of the board.
 # Uncomment to set to a specific value. See "Avoid SGF patterns" section.
@@ -298,7 +298,7 @@ conservativePass = true
 
 # Limits for search on the current turn.
 # If commented out or unspecified, the default is to have no limit.
-maxVisits = 500
+maxVisits = 800
 # maxPlayouts = 300
 # maxTime = 10.0
 
@@ -329,7 +329,7 @@ lagBuffer = 1.0
 #
 # Run "./katago benchmark" to tune this parameter and test the effect
 # of changes to any of other parameters.
-numSearchThreads = 4
+numSearchThreads = 20
 
 # Play a little faster if the opponent is passing, for human-friendliness.
 # Comment these out to disable them, such as if running a controlled match
@@ -465,7 +465,7 @@ searchFactorWhenWinningThreshold = 0.95
 
 # Uncomment and set to true to tune OpenCL for every board size separately,
 # rather than only the largest possible size.
-# openclReTunePerBoardSize = false
+openclReTunePerBoardSize = true
 
 # For one GPU: optionally uncomment and change this if the best device to use is guessed incorrectly.
 # The default behavior tries to guess the 'best' GPU or device on your system to use, usually it will be a good guess.
